[metadata]
name = pubmed
version = attr: pubmed.__version__
author = ["Samuel", "Shanthosh"]
keywords = git, contributions
license = GPLv3
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find: 
package_dir = 
    =src
python_require = >= 3.7 # What is the minimum version of python required?
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    git.stats=pubmed.__main__:main

[options.packages.find]
where = src
